# enrolment-agent

./: .deploy.env.example  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  ROADMAP.md  check-and-format.sh  deploy-env.sh  deploy-files.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  run-db.sh  run-prod-local.sh  stop-db.sh
backend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  alembic.ini  check.sh  pyproject.toml  run-build-rag-data.sh  run-dev.sh  run-prod.sh
backend/app/: app.py  backend_pre_start.py  models.py  otel.py  programs.py  scheduler.py  static_app.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 21c6c69a8a00_merge_heads.py  2cf06bb14675_auto_migration.py  2f7a3c9d1b5e_add_chatbot_version_scope_enum.py  35b5e6f06585_add_otel_span_extracted_fields.py  3b1a9e6b2b8e_add_catalog_document_types.py  5c2d0f4b1a90_add_otel_span.py  7c4b1f9a2c13_add_chatbot_version_scope.py  8d5e2a7f3c14_add_app_settings.py  9c2a4b7e1f6d_rename_prompt_set_version_table.py  a1f3c7d2b9aa_add_otel_span_is_ai.py  b8f8c4c3f0e5_rename_template_conversations.py  c7e5f1d2a9b0_add_refresh_tokens.py  d4a1c2f9e8ab_add_otel_span_usage_indexes.py  d58413347996_merge_telemetry_and_prompt_set_heads.py
backend/app/api/: deps.py  main.py  schemas.py  utils.py
backend/app/api/routes/: analytics.py  auth.py  consent.py  conversations.py  evals.py  health.py  messages.py  models.py  prompts.py  settings.py  usage.py
backend/app/chat/: config.py  engine.py  engine_utils.py  internal_summary.py  models.py  title.py  transcripts.py  tree_utils.py
backend/app/chat/tools/: __init__.py  catalog.py  deps.py  document.py  models.py  utils.py  wordpress.py
backend/app/core/: app_settings.py  authz.py  config.py  db.py  rate_limit.py  refresh_tokens.py  security.py
backend/app/evals/: __init__.py  dataset.py  evaluator.py  report.py  runner.py
backend/app/llm/: config.py  prompts.py  providers.py  runtime.py  telemetry.py  text.py  tokens.py
backend/app/llm/agents/: chatbot.py  guardrails.py  search.py  summary.py  title.py  variables_extraction.py
backend/app/llm/templates/: chatbot_agent.j2  chatbot_agent_internal.j2  guardrails_agent.j2  guardrails_agent_internal.j2  rfi_extraction_agent.j2  search_agent.j2  search_agent_internal.j2  summary_agent.j2  summary_agent_internal.j2  title_agent.j2  title_agent_internal.j2  title_agent_transcript.j2  title_agent_transcript_internal.j2
backend/app/llm/templates/test/: main.j2
backend/app/rag/: README.md  build.py  json_io.py  models.py  utils.py
backend/app/rag/transform/: transform_wp_data.py
backend/app/rag/wordpress/: README.md  cleaner.py  cli.py  config.py  converter.py  exporter.py  json_io.py  models.py  shortcode_analyzer.py  shortcode_cleaning_analyzer.py  wordpress_client.py
backend/app/sync/: cli.py  main.py  message.py  summary.py  transcript.py  variables.py
backend/scripts/: __init__.py  dump_otel_spans.py  generate_migration.py  prestart.sh
backend/tests/: README.md  __init__.py  conftest.py  rag_fixtures.py
backend/tests/chat/: eval_common.py  test_eval_chatbot.py  test_eval_guardrails.py  test_eval_search.py  test_llm_conversation_turn.py  test_otel_conversation_turn.py  test_unit_agents.py  test_unit_conversation_turn.py
backend/tests/otel/: test_otel_storage.py  test_trace_index.py
backend/tests/sync/: test_llm_variables_extraction.py
docs/: README.md  shadcn-ui-adaptations.md  wordpress-demo.md
frontend/: .gitignore  .prettierrc  AGENTS.md  format.sh  (+8 more)
(+43 files in other folders)
